# SimplePico

./: .gitignore  CMakeLists.txt  main.cpp
